<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/txtView"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_alignLeft="@id/textView"
        android:layout_alignRight="@id/textView">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Button1"
            android:text="@string/Bttn1"
            android:background="#2E3D49"
            android:onClick="displayMessage"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/Button2"
            android:text="@string/Bttn2"
            android:background="#2E3D49"
            android:onClick="displayMessage"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/Button3"
            android:text="@string/Bttn3"
            android:background="#2E3D49"
            android:onClick="displayMessage"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/Button4"
            android:text="@string/Bttn4"
            android:background="#2E3D49"
            android:onClick="displayMessage"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/Button5"
            android:text="@string/Bttn5"
            android:background="#2E3D49"
            android:onClick="displayMessage"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/Button6"
            android:text="@string/Bttn6"
            android:background="#2E3D49"
            android:onClick="displayMessage"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</RelativeLayout>